coreNetwork.TF
resource "azurerm_resource_group" "core" {
   name         = "core"
   location     = "${var.region}"
   tags         = "${var.tags}"
}


resource "azurerm_public_ip" "pip01" {
  name                = "xprGatewayPublicIp"
  location            = "${azurerm_resource_group.core.location}"
  resource_group_name = "${azurerm_resource_group.core.name}"
  allocation_method   = "Dynamic"

  tags = "${azurerm_resource_group.core.tags}"
}

resource "azurerm_public_ip" "pip02" {
  name                = "vpnGatewayPublicIp"
  location            = "${azurerm_resource_group.core.location}"
  resource_group_name = "${azurerm_resource_group.core.name}"
  allocation_method   = "Dynamic"

  tags = "${azurerm_resource_group.core.tags}"
}

resource "azurerm_network_security_group" "nsg01" {
  name                = "${azurerm_virtual_network.vnet01.name}-nsg"
  location            = "${azurerm_resource_group.core.location}"
  resource_group_name = "${azurerm_resource_group.core.name}"
}

resource "azurerm_virtual_network" "vnet01" {
  name                = "core"
  location            = "${azurerm_resource_group.core.location}"
  resource_group_name = "${azurerm_resource_group.core.name}"
  address_space       = ["10.0.0.0/16"]
  dns_servers         = ["1.1.1.1", "1.0.0.1"]

  subnet {
    name           = "GatewaySubnet"
    address_prefix = "10.0.0.0/24"
  }

  subnet {
    name           = "training"
    address_prefix = "10.0.1.0/24"
  }

  subnet {
    name           = "dev"
    address_prefix = "10.0.2.0/24"
    security_group = "${azurerm_network_security_group.nsg01.id}"
  }

  tags = "${azurerm_resource_group.core.tags}"
}
/*
resource "azurerm_virtual_network_gateway" "ngw02" {
  name                = "vpnGateway"
  location            = "${azurerm_resource_group.core.location}"
  resource_group_name = "${azurerm_resource_group.core.name}"

  type     = "Vpn"
  vpn_type = "RouteBased"

  active_active = false
  enable_bgp    = false
  sku           = "Basic"

  ip_configuration {
    name                          = "vnetGatewayConfig"
    public_ip_address_id          = "${azurerm_public_ip.test.id}"
    private_ip_address_allocation = "Dynamic"
    subnet_id                     = "${azurerm_subnet.GatewaySubnet.id}"
  }


}
*/
